--- a/src/components/main-page/IntroSection.module.css
+++ b/src/components/main-page/IntroSection.module.css
@@ -35,7 +35,10 @@
   color: #4a5568;
   margin-bottom: 36px;
 }
-
+.buttonComponent {
+  display: flex;
+  gap: 16px;
+}
 .buttonGroup {
   display: flex;
   gap: 16px;
