--- a/src/components/tutorial/TutorialSteps.module.css
+++ b/src/components/tutorial/TutorialSteps.module.css
@@ -60,6 +60,8 @@
   color: #000;
   text-transform: uppercase;
   letter-spacing: -0.5px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 .container p {
